--- a/index.html
+++ b/index.html
@@ -615,6 +615,7 @@
         <a class="tab-selector" href="#tab-Z">Z</a>
         <a class="tab-selector" href="#tab-c">c</a>
         <a class="tab-selector" href="#tab-m">m</a>
+        <a class="tab-selector" href="#tab-faq">FAQ</a>
       </nav>
 
       <br/><br/><br/>
@@ -1302,7 +1303,19 @@
             v0.2206170028
               - Improved z tab layout
               - Added z tab formulas
+            v0.2206170033
+              - Added faq tab
         </div>
+      </section>
+      <section id="tab-faq" class="tab hidden">
+        <div>
+          FAQ:<br/>
+          <div class="faq_entry">
+            <div class="faq_question">Why?</div>
+            <div class="faq_answer">
+              Good question.
+            </div>
+          </div>
       </section>
 
       <table id="datadisplay"></table>
